--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ h1{
 
 .app{
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   background: rgba(0,0,0,0.4);
   color: #fff;
@@ -38,6 +38,7 @@ h1{
   content: '';
   background: url('./assets/wi3.jpg') no-repeat center center/cover;
   position: absolute;
+  background-attachment: fixed;
   width: 100%;
   height: 100%;
   top: 0;
@@ -71,6 +72,7 @@ h1{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+ 
 }
 
 .app .top {
